@@ -1,5 +1,6 @@
-%~dp0..\bin\jdk-20.0.1\bin\javac --module-path %~dp0..\bin\javafx-sdk-11.0.2\lib --add-modules=javafx.media -d %~dp0..\pkg %~dp0..\src\*.java
-cd %~dp0..\pkg
-%~dp0..\bin\jdk-20.0.1\bin\jar cmf %~dp0..\debug\MANIFEST.MF %~dp0..\pkg\BALL_GAME.jar *.class
-del %~dp0..\pkg\*.class
+set out_dir=%~dp0..\pkg
+%~dp0..\bin\jdk-20.0.1\bin\javac -d %out_dir% %~dp0..\src\*.java
+cd %out_dir%
+%~dp0..\bin\jdk-20.0.1\bin\jar cmf %~dp0..\debug\MANIFEST.MF BALL_GAME.jar *.class
+del *.class
 cd %~dp0
